...
        floatingActionButton = {
            if (currentRoute == Tab.HOME.label) {
                FloatingActionButton(onClick = {
                    navController.navigate(Tab.ADDTASK.label)
                    showAddTask = true},
                    containerColor = MaterialTheme.colorScheme.primary) {
                    Icon(Icons.Filled.Add, contentDescription = "Add task", tint = Color.White)
                }
            }
        },
        bottomBar = {
            if (currentRoute != Tab.ADDTASK.label) {
                NavigationBar(
...
